[package]
name = "ticket"
version = "0.2.0"
authors = ["James Laverack <james@jameslaverack.com>"]
description = "Insert issue tracking ticket references into your commit messages automatically."

[dependencies]
clap = "~2.31"
git2 = "0.6"
text_io = "0.1.7"

[dev-dependencies]
tempfile = "3"
assert_cli = "0.6"
