[package]
name = "ticket"
version = "0.2.0"
authors = ["James Laverack <james@jameslaverack.com>"]
description = "Insert issue tracking ticket references into your commit messages automatically."

[dependencies]
clap = "~3.1"
git2 = "0.13"
text_io = "0.1.9"

[dev-dependencies]
tempfile = "3"
assert_cli = "0.6"
